--- a/src/main/resources/templates/settlement/cart.html
+++ b/src/main/resources/templates/settlement/cart.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=RocknRoll+One&display=swap" rel="stylesheet">
 	<link th:href="@{/css/cart.css}" rel="stylesheet">
-	<script th:src="@{/ajs/cart.js}"></script>
+	<script th:src="@{/js/cart.js}"></script>
 </head>
 
 <body>
