[若松] 仮のログインサイトを作成中

--- a/src/main/resources/templates/calender.html
+++ b/src/main/resources/templates/calender.html
@@ -29,6 +29,9 @@
 </head>
 
 <body>
+
+	<a th:href="@{/nextpageLogin}">登録画面へ飛ぶ</a>&nbsp;
+	
 	<!-- カレンダー全体を囲むコンテナ -->
 	<div class="calendar-container">
 
