--- a/src/main/resources/templates/nextpagelogin.html
+++ b/src/main/resources/templates/nextpagelogin.html
@@ -12,7 +12,7 @@
 	<h1>仮のログイン画面です。</h1>
 	<!-- ログインフォーム -->
 	<!-- th:actionはSecurityConfigのloginProcessingUrlで指定したURL -->
-	<form th:action="/calender" method="post">
+	<form th:action="/calender" method="get">
 		<table>
 			<tr>
 				<th>ID</th>
@@ -23,7 +23,7 @@
 				<td><input type="password" name="password" /></td>
 			</tr>
 		</table>
-		<input type="submit" value="登録/別ページへ" />
+		<input type="submit" value="登録/カレンダーへ" />
 	</form>
 
 </body>
