[若松]プッシュ

--- a/src/main/resources/templates/calender.html
+++ b/src/main/resources/templates/calender.html
@@ -42,7 +42,7 @@
 			<span id="month-year"></span>
 			<button onclick="changeMonth(1)">来月</button>
 
-			<form method="get" action="/nextpagelogin">
+			<form method="get" action="/nextpage2">
 				<button type="submit">登録画面へ</button>
 			</form>
 
