--- a/src/main/resources/templates/nextpage2.html
+++ b/src/main/resources/templates/nextpage2.html
@@ -14,14 +14,14 @@
 		<table>
 			<tr>
 				<th>ID</th>
-				<td><input type="text" name="username" /></td>
+				<td><input type="text" name="username"></td>
 			</tr>
 			<tr>
 				<th>PASSWORD</th>
-				<td><input type="password" name="password" /></td>
+<!--				<td><input type="password" name="password"></td>-->
 			</tr>
 		</table>
-		<input type="submit" value="登録/カレンダーへ" />
+		<input type="submit" value="登録/カレンダーへ">
 	</form>
 
 </body>
