--- a/src/main/resources/templates/shopList.html
+++ b/src/main/resources/templates/shopList.html
@@ -14,7 +14,8 @@
 	
 	<div class="subtitle">
 		<!--		<h2 style="text-align:center;">-->
-		<h2><span th:text="${holidays}">曜日営業の店舗一覧</span></h2>
+<!--		<h2><span th:text="${holidays}">曜日営業の店舗一覧</span></h2>-->
+		<h2 th:text="${holidays}">曜日営業の店舗一覧</h2>
 	</div>
 
 	<div id="content1" th:each="shop : ${shopLists}">
