--- a/src/main/resources/templates/settlement/cart2.html
+++ b/src/main/resources/templates/settlement/cart2.html
@@ -33,7 +33,7 @@
 
 					<h1 th:text="${obj.name}">仮</h1>
 					<p>受け取り</p>
-					<p class="time>日時：8/25 12：00</p>
+					<p class="time">日時：8/25 12：00</p>
 					
 				</div>
 
