--- a/src/main/resources/templates/niku.html
+++ b/src/main/resources/templates/niku.html
@@ -10,21 +10,31 @@
 
 <body>
 	<div class="menu-section">
-			<h1>NIKU BENTOU    肉弁当</h1>
+		<h1>NIKU BENTOU 肉弁当</h1>
 
 		<div class="box1">
 			<div class="menu-items">
 				<div class="menu-item">
 					<img th:src="'data:image/png;base64,'+${hamburger}" alt="おろしハンバーグ弁当">
+					<div class="item-description">
+						<p th:text="${hamburgerIntroductions}"></p>
+					</div>
 					<div class="text-wrapper">
 						<p class="item-name">おろしハンバーグ弁当</p>
 					</div>
 					<div class="size-wrapper">
-						<span class="item-size">Sサイズ </span><span class="item-price"
-							th:text="${hamburgerSPrice} + '円'"></span>
+						<input type="radio" id="hamburgerS" name="hamburgerSize" value="S">
+						<label for="hamburgerS">
+							<span class="item-size">Sサイズ </span><span class="item-price"
+								th:text="${hamburgerSPrice} + '円'"></span>
+						</label>
 						<br />
-						<span class="item-size">Mサイズ </span><span class="item-price"
-							th:text="${hamburgerMPrice} + '円'"></span>
+						<input type="radio" id="hamburgerM" name="hamburgerSize" value="M">
+						<label for="hamburgerM">
+							<span class="item-size">Mサイズ </span><span class="item-price"
+								th:text="${hamburgerMPrice} + '円'"></span>
+						</label>
+						<button class="select-button">選択</button>
 					</div>
 				</div>
 			</div>
@@ -34,15 +44,25 @@
 			<div class="menu-items">
 				<div class="menu-item">
 					<img th:src="'data:image/png;base64,'+${yakiniku}" alt="焼肉弁当">
+					<div class="item-description">
+						<p th:text="${yakinikuIntroductions}"></p>
+					</div>
 					<div class="text-wrapper">
 						<p class="item-name">焼肉弁当</p>
 					</div>
 					<div class="size-wrapper">
-						<span class="item-size">Sサイズ </span><span class="item-price"
-							th:text="${yakinikuSPrice} + '円'"></span>
+						<input type="radio" id="yakinikuS" name="yakinikuSize" value="S">
+						<label for="yakinikuS">
+							<span class="item-size">Sサイズ </span><span class="item-price"
+								th:text="${yakinikuSPrice} + '円'"></span>
+						</label>
 						<br />
-						<span class="item-size">Mサイズ </span><span class="item-price"
-							th:text="${yakinikuMPrice} + '円'"></span>
+						<input type="radio" id="yakinikuM" name="yakinikuSize" value="M">
+						<label for="yakinikuM">
+							<span class="item-size">Mサイズ </span><span class="item-price"
+								th:text="${yakinikuMPrice} + '円'"></span>
+						</label>
+						<button class="select-button">選択</button>
 					</div>
 				</div>
 			</div>
@@ -52,15 +72,25 @@
 			<div class="menu-items">
 				<div class="menu-item">
 					<img th:src="'data:image/png;base64,'+${chicken}" alt="ねぎ塩チキン竜田弁当">
+					<div class="item-description">
+						<p th:text="${chickenIntroductions}"></p>
+					</div>
 					<div class="text-wrapper">
 						<p class="item-name">ねぎ塩チキン竜田弁当</p>
 					</div>
 					<div class="size-wrapper">
-						<span class="item-size">Sサイズ </span><span class="item-price"
-							th:text="${chickenSPrice} + '円'"></span>
+						<input type="radio" id="chickenS" name="chickenSize" value="S">
+						<label for="chickenS">
+							<span class="item-size">Sサイズ </span><span class="item-price"
+								th:text="${chickenSPrice} + '円'"></span>
+						</label>
 						<br />
-						<span class="item-size">Mサイズ </span><span class="item-price"
-							th:text="${chickenMPrice} + '円'"></span>
+						<input type="radio" id="chickenM" name="chickenSize" value="M">
+						<label for="chickenM">
+							<span class="item-size">Mサイズ </span><span class="item-price"
+								th:text="${chickenMPrice} + '円'"></span>
+						</label>
+						<button class="select-button">選択</button>
 					</div>
 				</div>
 			</div>
