--- a/src/main/resources/templates/sakana.html
+++ b/src/main/resources/templates/sakana.html
@@ -10,21 +10,31 @@
 
 <body>
 	<div class="menu-section">
-			<h1>SAKANA BENTOU    魚弁当</h1>
+		<h1>SAKANA BENTOU 魚弁当</h1>
 
 		<div class="box1">
 			<div class="menu-items">
 				<div class="menu-item">
 					<img th:src="'data:image/png;base64,'+${omakase}" alt="ザ・オマカセ弁当">
+					<div class="item-description">
+						<p th:text="${omakaseIntroductions}"></p>
+					</div>
 					<div class="text-wrapper">
 						<p class="item-name">ザ・オマカセ弁当</p>
 					</div>
 					<div class="size-wrapper">
-						<span class="item-size">Sサイズ </span><span class="item-price"
-							th:text="${omakaseSPrice} + '円'"></span>
+						<input type="radio" id="omakaseS" name="omakaseSize" value="S">
+						<label for="omakaseS">
+							<span class="item-size">Sサイズ </span><span class="item-price"
+								th:text="${omakaseSPrice} + '円'"></span>
+						</label>
 						<br />
-						<span class="item-size">Mサイズ </span><span class="item-price"
-							th:text="${omakaseMPrice} + '円'"></span>
+						<input type="radio" id="omakaseM" name="omakaseSize" value="M">
+						<label for="omakaseM">
+							<span class="item-size">Mサイズ </span><span class="item-price"
+								th:text="${omakaseMPrice} + '円'"></span>
+						</label>
+						<button class="select-button">選択</button>
 					</div>
 				</div>
 			</div>
@@ -34,15 +44,25 @@
 			<div class="menu-items">
 				<div class="menu-item">
 					<img th:src="'data:image/png;base64,'+${syake}" alt="シャケデラックス弁当">
+					<div class="item-description">
+						<p th:text="${syakeIntroductions}"></p>
+					</div>
 					<div class="text-wrapper">
 						<p class="item-name">シャケデラックス弁当</p>
 					</div>
 					<div class="size-wrapper">
-						<span class="item-size">Sサイズ </span><span class="item-price"
-							th:text="${syakeSPrice} + '円'"></span>
+						<input type="radio" id="syakeS" name="syakeSize" value="S">
+						<label for="syakeS">
+							<span class="item-size">Sサイズ </span><span class="item-price"
+								th:text="${syakeSPrice} + '円'"></span>
+						</label>
 						<br />
-						<span class="item-size">Mサイズ </span><span class="item-price"
-							th:text="${syakeMPrice} + '円'"></span>
+						<input type="radio" id="syakeM" name="syakeSize" value="M">
+						<label for="syakeM">
+							<span class="item-size">Mサイズ </span><span class="item-price"
+								th:text="${syakeMPrice} + '円'"></span>
+						</label>
+						<button class="select-button">選択</button>
 					</div>
 				</div>
 			</div>
@@ -52,15 +72,25 @@
 			<div class="menu-items">
 				<div class="menu-item">
 					<img th:src="'data:image/png;base64,'+${saba}" alt="さば炭火焼デラックス弁当">
+					<div class="item-description">
+						<p th:text="${sabaIntroductions}"></p>
+					</div>
 					<div class="text-wrapper">
 						<p class="item-name">さば炭火焼デラックス弁当</p>
 					</div>
 					<div class="size-wrapper">
-						<span class="item-size">Sサイズ </span><span class="item-price"
-							th:text="${sabaSPrice} + '円'"></span>
+						<input type="radio" id="sabaS" name="sabaSize" value="S">
+						<label for="sabaS">
+							<span class="item-size">Sサイズ </span><span class="item-price"
+								th:text="${sabaSPrice} + '円'"></span>
+						</label>
 						<br />
-						<span class="item-size">Mサイズ </span><span class="item-price"
-							th:text="${sabaMPrice} + '円'"></span>
+						<input type="radio" id="sabaM" name="sabaSize" value="M">
+						<label for="sabaM">
+							<span class="item-size">Mサイズ </span><span class="item-price"
+								th:text="${sabaMPrice} + '円'"></span>
+						</label>
+						<button class="select-button">選択</button>
 					</div>
 				</div>
 			</div>
