--- a/src/main/resources/templates/settlement/cart2.html
+++ b/src/main/resources/templates/settlement/cart2.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=RocknRoll+One&display=swap"
 		rel="stylesheet">
 	<link th:href="@{/css/cart.css}" rel="stylesheet">
-	<script th:src="@{/js/cart.js}"></script>
+	<script th:src="@{/ajs/cart.js}"></script>
 </head>
 
 <body>
@@ -22,30 +22,26 @@
 		<section id="cart">
 			<article class="product">
 				<header>
-					<a class="remove">
-						<img th:src="'data:image/png;base64,'+${obj.image}" alt="店名">
-
-						<h3>削除</h3>
-					</a>
+					<form th:action="@{/delete}" method="post">
+<!--						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+						<input type="hidden" name="bn" th:value="${obj.index}" th:field="*{}"/>
+						
+						<button type="submit" class="remove">
+							<img th:src="'data:image/png;base64,'+${obj.image}" alt="店名">
+							<h3>削除</h3>
+						</button>
+					</form>
 				</header>
 
 				<div class="content">
 
 					<h1 th:text="${obj.name}">仮</h1>
 					<p>受け取り</p>
-					<p class="time">日時：8/25 12：00</p>
-					
+					<p class="time"th:text="${#temporals.format(obj.pickupTime, 'yyyy年MM月dd日 HH:mm')}">日時：8/25 12：00</p>
+
 				</div>
 
 				<footer class=" content">
-
-						<select class="qt" onchange="updateTotal(this)">
-							<option value="1">1</option>
-							<option value="2">2</option>
-							<option value="3">3</option>
-							<option value="4">4</option>
-							<option value="5">5</option>
-						</select>
 
 					<h2 class="full-price">
 						1300円
@@ -54,7 +50,7 @@
 					<h2 class="price">
 						650円
 					</h2>
-					</footer>
+				</footer>
 			</article>
 
 		</section>
