[若松]曜日とばせました。

--- a/src/main/resources/templates/calender.html
+++ b/src/main/resources/templates/calender.html
@@ -88,7 +88,7 @@
 				
 				
 				<label for="time-select">時間:</label>
-				<select id="time-select">
+				<select id="time-select" name="ordertime">
 				</select>
 
 				<!-- 決定ボタンにて selectDateTime で予約時間の表示 -->
@@ -96,7 +96,7 @@
 				<!--  ①type="submit"でボタン表示 ②onclickで予約時間を表示-->
 			</form>
 		</div>
-		<h0>注文するために日付と時間を選んで決定ボタンを押してください。</h0>
+		<h0>受け取るに日付と時間を選んで決定ボタンを押してください。</h0>
 	</div>
 
 	<!-- 注文履歴表示部分 -->
