--- a/src/main/resources/templates/nextpage.html
+++ b/src/main/resources/templates/nextpage.html
@@ -12,8 +12,9 @@
 	<h1>無事、表示されました！</h1>
 
 	<ul>
-		<li>注文日時：[[${calenderForm.orderdate}]]</li>
-		<li>注文曜日：あとで</li>
+		<li>受け取り日時：[[${orderdate}]]:Date型</li>
+		<li>受け取り時間：[[${ordertime}]]：String型</li>		
+		<li>注文曜日：[[${dayofweek}]]</li>
 	</ul>
 
 </body>
