--- a/src/main/resources/templates/settlement/deleteSuccess.html
+++ b/src/main/resources/templates/settlement/deleteSuccess.html
@@ -15,7 +15,7 @@
 	<div class="content-title">
 		<p>削除が完了しました。</p>
 	</div>
-	<a th:href="@{calender}" class="btn">ホームへ戻る</a>
+	<a th:href="@{/cart}" class="btn">カートへ戻る</a>
 </body>
 
 </html>
