--- a/src/main/resources/templates/settlement/cart2.html
+++ b/src/main/resources/templates/settlement/cart2.html
@@ -17,14 +17,14 @@
 		<p><span>弁ぷら</span>カート</p>
 	</div>
 
-	<div th:each="obj:${dtoList}" class="container">
+	<div th:each="obj,s:${dtoList}" class="container">
 
 		<section id="cart">
 			<article class="product">
 				<header>
 					<form th:action="@{/delete}" method="post">
 <!--						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-						<input type="hidden" name="bn" th:value="${obj.index}" th:field="*{}"/>
+						<input type="hidden" name="bn" th:value="${s.index}"/>
 						
 						<button type="submit" class="remove">
 							<img th:src="'data:image/png;base64,'+${obj.image}" alt="店名">
