--- a/src/main/resources/static/css/donburi.css
+++ b/src/main/resources/static/css/donburi.css
@@ -20,6 +20,15 @@ body {
 	justify-content: center;
 	align-items: center;
 }
+.name-description{
+	font-family: 'Quicksand', sans-serif;
+	font-size: 25px;
+	color: rgb(0, 0, 0);
+	margin-top: 10px;
+	line-height:1.5;
+	text-align: center;
+	font-weight: bold;
+}
 
 .item-description {
 	font-family: 'Quicksand', sans-serif;
